# typeflux-demos

./: .gitignore  README.md  pyproject.toml
support_triage/: .env.example  README.md  __init__.py  app.py  main.py  pyproject.toml  registry.py
support_triage/demo/: __init__.py
support_triage/domain/: domain.yaml  rules.py
support_triage/prompts/: draft.txt  route.txt
support_triage/schemas/: models.py
support_triage/tests/: __init__.py  test_app.py  test_settings.py  test_wiring.py
support_triage/workflow/: __init__.py  pipeline.py  steps.py
support_triage_yaml/: README.md  __init__.py  pyproject.toml  registry.py
support_triage_yaml/config/: __init__.py  settings.py
support_triage_yaml/demo/: sample_data.py
support_triage_yaml/domain/: __init__.py  rules.py
support_triage_yaml/prompts/: __init__.py  classify.txt  package.txt
support_triage_yaml/schemas/: __init__.py  models.py
support_triage_yaml/tests/: __init__.py  test_app.py  test_settings.py  test_wiring.py
support_triage_yaml/workflow/: __init__.py  pipeline.py  steps.py  support_triage_yaml.yaml
tutorial/: README.md  minimal_inline_anthropic_demo.ipynb  pyproject.toml
tutorial/prompts/: explain.txt
tutorial/tutorial_demo/: __init__.py
