[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "typeflux-tutorial-demo"
version = "0.1.0"
description = "Self-contained Typeflux tutorial notebook project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typeflux-py[anthropic]>=0.1.0",
  "jupyter>=1.0",
  "ipykernel>=6.0",
]

[tool.setuptools.packages.find]
include = ["tutorial_demo*"]

